--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,6 +23,8 @@ tracing-subscriber = {version = "0.3.16", features = ["env-filter"] }
 moka = {version = "0.12.1", features = ["future"]}
 actix-cors = "0.6.5"
 actix-files = "0.6.2"
+tracing-actix-web = "0.7.9"
+tracing-log = "0.2.0"
 
 [profile.release]
 strip = "debuginfo"
