--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ name = "server"
 path = "./src/main.rs"
 
 [dependencies]
-reqwest = "0.11.13"
+reqwest ={ version = "0.11.13", features = ["rustls-tls"]}
 url = { version = "2.3.1", features = ["serde"] }
 tokio = { version = "1.23.0", features = ["full"] }
 clap = { version = "4.0.32", features = ["derive"] }
